# algorithms_datastructures

./: ALGORITHM_TRAINING_OVERVIEW.md  LINKED_LIST_TRAINING_README.md  README.md  bubble_sort.py  dijkstra_training_tasks.py  inheritance.py  intervals_task.py  linked_list_training_tasks.py  pyproject.toml  stack_learn.py  task1.py
algorithms/: binary_search.py  make_change.py
algorithms/brute_force_algorithms/: linear_search.py
algorithms/dijkstra_algorithm/: DIJKSTRA_TRAINING_README.md  dijkstra_algorithm_01.py  practice.py
algorithms/greedy_algorithms/: change_making_problem.py  doors100.py  fizz_buzz.py  understanding.md
algorithms/hash_map/: 02_min_next_int.py  frequency_counting.py
algorithms/heap_ds/: postfix_exp.py
algorithms/selection_sort/: selection_sort_v1.py
algorithms/two_pointers/: TWO_POINTERS_TRAINING_OVERVIEW.md  container_with_most_water.md  container_with_most_water.py  string_traversal.py  triplet_sum.py  two_pointers.py  two_sum.py
asynio_learn/: example1.py
bigOnotations/: big_o_constants_explanation.md
builder/: README.md
data_stuctures/dictionary_use/: total_number.py
heap_algo/: heap_use_example.py
heap_algo/dijkastas_algorithm/: Dijksta_algoritm_tasks.md  dijkastras_algorithm_realisation_v1.py  step1_graph_representation.py  step2_heap_basics.py  step3_distance_tracking.py  step4_simple_dijkstra.py  step5_complete_dijkstra.py
interval_training/: INTERVAL_TRAINING_README.md  greedy.py  interval_training_tasks.py  merge_time_ranges.py  two_pointers.py
interview/: adapter.py  schema.drawio  task.txt  taskhb.txt
(+5 files in other folders)
