[project]
name = "algorithms-datastructures"
version = "0.1.0"
description = "education"
authors = [
    {name = "ruslan.skira@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
